--- a/App.ipynb
+++ b/App.ipynb
@@ -9,14 +9,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 250,
    "metadata": {},
    "outputs": [],
    "source": [
     "import PCV\n",
     "import WindowCreator as wc\n",
     "import NecessarySets as ns\n",
-    "import PDAC6\n",
+    "import PDACR1\n",
     "import PDA as pda"
    ]
   },
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 251,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,9 +41,10 @@
     "             pcv_variables['non_terminal_finish']]\n",
     "\n",
     "ui_variables = {'w_title': 'Grammars', 'w_dimensions': '600x600', 'w_resizable': (False, False), 'txt_box_h': 25,\n",
-    "                'txt_box_w': 25, 'txt_box_coor': (0, 0), 'b_pda_name': 'Create Automata', 'b_width': 50,\n",
-    "                'b_pda_coor': (250, 0), 'input_err_m': 'Your input does not follow the convention',\n",
-    "                'err_0': 'Your productions are not well written', 'err_1': 'There is an infinite cycle in your productions'}"
+    "                'txt_box_w': 25, 'txt_box_coor': (0, 0), 'b_pda_name': 'Create Automata', 'c_b_name': 'Clear Grammar',\n",
+    "                'b_width': 50, 'c_b_width': 25, 'b_pda_coor': (250, 0), 'c_b_coord': (250, 50),\n",
+    "                'input_err_m': 'Your input does not follow the convention', 'err_0': 'Your productions are not well written',\n",
+    "                'err_1': 'There is an infinite cycle in your productions'}"
    ]
   },
   {
@@ -55,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 252,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,6 +68,7 @@
     "        self.window = None\n",
     "        self.txt_box = None\n",
     "        self.b_pda = None\n",
+    "        self.clear_button = None\n",
     "        self.production_creator = PCV.ProductionCreator(pcv_variables['string_separator'], pcv_variables['non_terminal_start'],\n",
     "                                                       pcv_variables['non_terminal_finish'], pcv_variables['arrow_tail'],\n",
     "                                                       pcv_variables['arrow_op'])\n",
@@ -83,6 +85,9 @@
     "        self.b_pda = wc.create_button(self.window, self.ui_variables['b_pda_name'], self.ui_variables['b_width'],\n",
     "                                      self.create_push_down_automata)\n",
     "        self.b_pda.place(x=self.ui_variables['b_pda_coor'][0], y=self.ui_variables['b_pda_coor'][1])\n",
+    "        self.clear_button = wc.create_button(self.window, self.ui_variables['c_b_name'], self.ui_variables['c_b_width'],\n",
+    "                                      self.clear_grammars)\n",
+    "        self.clear_button.place(x=self.ui_variables['c_b_coord'][0], y=self.ui_variables['c_b_coord'][1])\n",
     "        self.window.mainloop()\n",
     "        \n",
     "    def valid_productions(self, productions):\n",
@@ -100,36 +105,63 @@
     "        nullable_productions = self.production_set.get_nullable_productions(nullable_non_terminals)\n",
     "        set_of_firsts_for_non_terminals = self.production_set.replace_non_terminals(self.production_set.get_firsts_base_cases(\n",
     "            nullable_non_terminals))\n",
-    "        print('primeros', set_of_firsts_for_non_terminals)\n",
     "        set_of_firsts_for_productions = self.production_set.get_set_of_firsts_for_productions(nullable_non_terminals,\n",
     "                                                                                set_of_firsts_for_non_terminals)\n",
     "        set_of_nexts = self.production_set.replace_non_terminals(self.production_set.get_nexts_base_cases(\n",
     "            nullable_non_terminals, set_of_firsts_for_non_terminals))\n",
-    "        print('siguiente', set_of_nexts)\n",
     "        selection_set = self.production_set.get_set_of_selection_for_productions(nullable_productions,\n",
     "                                                                   set_of_firsts_for_productions, set_of_nexts)\n",
     "        return selection_set\n",
     "    \n",
+    "    def convert_set_to_string(self, _set):\n",
+    "        string = '{'\n",
+    "        for element in _set:\n",
+    "            if not _set.index(element) == len(_set)-1:\n",
+    "                string += (element + ', ')\n",
+    "            else:\n",
+    "                string += (element + '}')\n",
+    "        return string\n",
+    "            \n",
     "    def obtain_pda(self):\n",
     "        results = self.pda_creator.create_PDA()\n",
     "        report = ''\n",
     "        for result in results:\n",
-    "            if result[2]:\n",
-    "                report += (result[0] + '\\n')\n",
-    "                if not self.push_down_automata:\n",
+    "            if result[2] == 0:\n",
+    "                report += (result[0] +  '\\n'+ '\\n')\n",
+    "                if not self.push_down_automata and result[1]:\n",
     "                    self.push_down_automata = result[1]\n",
-    "            else:\n",
-    "                report += result[0]\n",
+    "            elif result[2] == 1:\n",
+    "                report += (result[0] + '\\n'+ '\\n')\n",
     "                for production in result[1]:\n",
     "                    if not result[1].index(production) == len(result[1])-1:\n",
     "                        report += (production.left_side + '->' + ''.join(production.right_side) + ', ')\n",
     "                    else:\n",
-    "                        report += (production.left_side + '->' +''.join(production.right_side) + '\\n')\n",
+    "                        report += (production.left_side + '->' +''.join(production.right_side) + '\\n'+ '\\n')\n",
+    "            elif result[2] == 2 or result[2] == 3:\n",
+    "                report += (result[0] +  '\\n'+ '\\n')\n",
+    "                production = result[1]\n",
+    "                report += (production.left_side + '->' +''.join(production.right_side) + '\\n'+ '\\n')\n",
+    "            elif result[2] == 4:\n",
+    "                report += (result[0] + '\\n'+ '\\n')\n",
+    "                for pairs in result[1]:\n",
+    "                    production = pairs[0]\n",
+    "                    sets = list(pairs[1])\n",
+    "                    sets = self.convert_set_to_string(sets)\n",
+    "                    if not result[1].index(pairs) == len(result[1])-1:\n",
+    "                        report += ('production: ' + production.left_side + '->' + ''.join(production.right_side) +\n",
+    "                                   ' with selection set: '+ sets + '\\n')\n",
+    "                    else:\n",
+    "                        report += ('production: ' + production.left_side + '->' + ''.join(production.right_side) +\n",
+    "                                   ' with selection set: '+ sets + '\\n'+ '\\n')                \n",
     "        wc.show_info_message(report)\n",
     "        if self.push_down_automata:\n",
     "            wc.show_info_message('Automata Created')\n",
     "        else:\n",
     "            wc.show_info_message('Automata was not Created')\n",
+    "    \n",
+    "    def clear_grammars(self):\n",
+    "        self.push_down_automata = None\n",
+    "        self.txt_box.delete(\"1.0\",\"end-1c\")\n",
     "        \n",
     "    def create_push_down_automata(self):\n",
     "        string = self.txt_box.get(\"1.0\",\"end-1c\")\n",
@@ -148,7 +180,7 @@
     "                                                 self.pcv_variables['end_of_sequence_symbol'], productions, non_terminals)\n",
     "                selection_set = self.get_selection_set()\n",
     "                stack_operations = pda.StackOperation()\n",
-    "                self.pda_creator = PDAC6.PDACreator(self.pcv_variables['end_of_sequence_symbol'], \n",
+    "                self.pda_creator = PDACR1.PDACreator(self.pcv_variables['end_of_sequence_symbol'], \n",
     "                                                   self.pcv_variables['null_sequence_symbol'],\n",
     "                                                   self.pcv_variables['empty_stack_symbol'],\n",
     "                                                   initial_non_terminal, non_terminals, productions, stack_operations,\n",
@@ -159,22 +191,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 253,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "primeros [['<S>', {'a', 'z'}], ['<A>', {'a', 'z'}], ['<B>', {'b'}], ['<C>', {'a', 'z'}], ['<D>', {'d'}], ['<E>', {'a', 'z'}], ['<F>', {'d'}]]\n",
-      "siguiente [['<S>', {'e', '!'}], ['<A>', {'!', 'e', 'b'}], ['<B>', {'e', '!'}], ['<C>', {'d', '!', 'b', 'e'}], ['<D>', {'b', 'e', '!'}], ['<E>', {'!', 'e', 'b'}], ['<F>', {'!', 'e', 'b'}]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "app = App(pcv_variables, ui_variables)\n",
     "app.start()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
