--- a/PDACR1.ipynb
+++ b/PDACR1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
     "    def get_productions_same_non_terminal_l_side(self, non_terminal):\n",
     "        productions_same_l_side = []\n",
     "        for production in self.productions:\n",
-    "            if production.left_side == non_terminal and not production in productions_same_l_side:\n",
+    "            if production.left_side == non_terminal:\n",
     "                productions_same_l_side.append(production)\n",
     "        return productions_same_l_side\n",
     "    \n",
@@ -107,15 +107,20 @@
     "        sets = set()\n",
     "        for number in production_numbers:\n",
     "            index = production_numbers.index(number)+1\n",
-    "            current_set = self.selection_set[number]\n",
     "            while(index < len(production_numbers)):\n",
+    "                current_set = self.selection_set[number]\n",
     "                current_set = current_set.intersection(self.selection_set[production_numbers[index]])\n",
     "                if current_set != set():\n",
     "                    sets.add(number)\n",
-    "                    sets.add(index)\n",
-    "                current_set = self.selection_set[number]\n",
+    "                    sets.add(self.selection_set.index(self.selection_set[production_numbers[index]]))\n",
     "                index +=1\n",
     "        return list(sets)\n",
+    "    \n",
+    "    def get_selection_sets_with_numbers(self, numbers):\n",
+    "        sets = []\n",
+    "        for number in numbers:\n",
+    "            sets.append(self.selection_set[number])\n",
+    "        return sets\n",
     "    \n",
     "    def is_q_grammar(self):\n",
     "        q_grammar = (0, None)\n",
@@ -125,20 +130,22 @@
     "            productions_number_same_l_side = self.get_productions_number_same_non_terminal_l_side(\n",
     "            productions_same_non_terminal_l_side)\n",
     "            if not self.selection_sets_are_disjoint(productions_number_same_l_side):\n",
-    "                q_grammar = (1, self.get_productions_with_numbers(self.get_selection_sets_not_disjoint(\n",
-    "                    productions_number_same_l_side))) # selection_sets are joint\n",
+    "                numbers = self.get_selection_sets_not_disjoint(productions_number_same_l_side)\n",
+    "                productions_with_numbers = self.get_productions_with_numbers(numbers)\n",
+    "                selection_sets_with_numbers = self.get_selection_sets_with_numbers(numbers)\n",
+    "                q_grammar = (4, list(zip(productions_with_numbers, selection_sets_with_numbers))) # selection_sets are joint\n",
     "                break\n",
     "            for production in productions_same_non_terminal_l_side:\n",
     "                if self.is_terminal(production.right_side[0]):\n",
     "                    if not production.right_side[0] in terminals:\n",
     "                        terminals.append(production.right_side[0])\n",
     "                    else:\n",
-    "                        q_grammar = (2, self.get_productions_start_with_terminal(production.right_side[0],\n",
+    "                        q_grammar = (1, self.get_productions_start_with_terminal(production.right_side[0],\n",
     "                                                                                 productions_same_non_terminal_l_side))\n",
     "                        break\n",
     "                else:\n",
     "                    if self.is_non_terminal(production.right_side[0]):\n",
-    "                        q_grammar = (3, production) # production starts with non_terminal\n",
+    "                        q_grammar = (2, production) # production starts with non_terminal\n",
     "                        break\n",
     "        return q_grammar\n",
     "    \n",
@@ -149,8 +156,10 @@
     "            productions_number_same_l_side = self.get_productions_number_same_non_terminal_l_side(\n",
     "            productions_same_non_terminal_l_side)\n",
     "            if not self.selection_sets_are_disjoint(productions_number_same_l_side):\n",
-    "                ll_grammar = (1, self.get_productions_with_numbers(self.get_selection_sets_not_disjoint(\n",
-    "                    productions_number_same_l_side)))\n",
+    "                numbers = self.get_selection_sets_not_disjoint(productions_number_same_l_side)\n",
+    "                productions_with_numbers = self.get_productions_with_numbers(numbers)\n",
+    "                selection_sets_with_numbers = self.get_selection_sets_with_numbers(numbers)\n",
+    "                ll_grammar = (4, list(zip(productions_with_numbers, selection_sets_with_numbers)))\n",
     "                break\n",
     "        return ll_grammar\n",
     "    \n",
@@ -331,39 +340,40 @@
     "            transition_table = self.get_transition_table_s_grammar(symbols_in_PDA, input_symbols)\n",
     "            push_down_automata = pda.PushDownAutomaton(input_symbols, self.end_of_sequence_symbol, 'A', 'R',\n",
     "                                                      initial_configuration, transition_table)\n",
-    "            result.append(('It is S grammar', push_down_automata, True))\n",
+    "            result.append(('It is S grammar', push_down_automata, 0))\n",
     "        elif s_grammar[0] == 1:\n",
-    "            result.append(('It is not S grammar, same non terminal starts with same terminal: ', s_grammar[1], False))\n",
+    "            result.append(('It is not S grammar, same non terminal starts with same terminal: ', s_grammar[1], 1))\n",
     "        elif s_grammar[0] == 2:\n",
-    "            result.append(('It is not S grammar, production starts with a non terminal: ', [s_grammar[1]], False))\n",
+    "            result.append(('It is not S grammar, production starts with a non terminal: ', s_grammar[1], 2))\n",
     "        elif s_grammar[0] == 3:\n",
-    "            result.append(('It is not S grammar, production is nullable: ', [s_grammar[1]], False))\n",
+    "            result.append(('It is not S grammar, production is nullable: ', s_grammar[1], 3))\n",
     "            \n",
     "        if q_grammar[0] == 0:\n",
     "            transition_table = self.get_transition_table_q_grammar(symbols_in_PDA, input_symbols)\n",
     "            if not push_down_automata:\n",
     "                push_down_automata = pda.PushDownAutomaton(input_symbols, self.end_of_sequence_symbol, 'A', 'R',\n",
     "                                                           initial_configuration, transition_table)\n",
-    "                result.append(('It is Q grammar', push_down_automata, True))\n",
+    "                result.append(('It is Q grammar', push_down_automata, 0))\n",
     "            else:\n",
-    "                result.append(('It is Q grammar', None, True))\n",
+    "                result.append(('It is Q grammar', None, 0))\n",
     "        elif q_grammar[0] == 1:\n",
-    "            result.append(('It is not Q grammar, selection sets of these productions are not disjoint: ', q_grammar[1], False))\n",
+    "            result.append(('It is not Q grammar, same non terminal starts with same terminal: ', q_grammar[1], 1))\n",
     "        elif q_grammar[0] == 2:\n",
-    "            result.append(('It is not Q grammar, same non terminal starts with same terminal: ', [q_grammar[1]], False))\n",
-    "        elif q_grammar[0] == 3:\n",
-    "            result.append(('It is not Q grammar, production starts with a non terminal: ', [q_grammar[1]], False))\n",
+    "            result.append(('It is not Q grammar, production starts with a non terminal: ', q_grammar[1], 2))\n",
+    "        elif q_grammar[0] == 4:\n",
+    "            result.append(('It is not Q grammar, selection sets of these productions are not disjoint: ', q_grammar[1], 4))\n",
+    "\n",
     "        if ll_grammar[0] == 0:\n",
     "            transition_table = self.get_transition_table_ll_grammar(symbols_in_PDA, input_symbols)\n",
     "            if not push_down_automata:\n",
     "                push_down_automata = pda.PushDownAutomaton(input_symbols, self.end_of_sequence_symbol, 'A', 'R',\n",
     "                                                           initial_configuration, transition_table)\n",
-    "                result.append(('It is LL grammar', push_down_automata, True))\n",
+    "                result.append(('It is LL grammar', push_down_automata, 0))\n",
     "            else:\n",
-    "                result.append(('It is LL grammar', None, True))\n",
+    "                result.append(('It is LL grammar', None, 0))\n",
     "            \n",
-    "        elif ll_grammar[0] == 1:\n",
-    "            result.append(('It is not LL grammar, selection sets of these productions are not disjoint: ', ll_grammar[1], False))\n",
+    "        elif ll_grammar[0] == 4:\n",
+    "            result.append(('It is not LL grammar, selection sets of these productions are not disjoint: ', ll_grammar[1], 4))\n",
     "        \n",
     "        return result"
    ]
