--- a/App.ipynb
+++ b/App.ipynb
@@ -1,35 +1,35 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 250,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "import PCV\n",
-    "import WindowCreator as wc\n",
-    "import NecessarySets as ns\n",
-    "import PDACR1\n",
-    "import PDA as pda"
+    "# Imports"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 500,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import PCV\n",
+    "import wc1\n",
+    "import NecessarySets as ns\n",
+    "import PDACR9\n",
+    "import PDA9 as pda"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Variables"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 251,
+   "execution_count": 501,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,23 +40,28 @@
     "             pcv_variables['empty_stack_symbol'], pcv_variables['end_of_sequence_symbol'], pcv_variables['non_terminal_start'],\n",
     "             pcv_variables['non_terminal_finish']]\n",
     "\n",
-    "ui_variables = {'w_title': 'Grammars', 'w_dimensions': '600x600', 'w_resizable': (False, False), 'txt_box_h': 25,\n",
+    "ui_variables = {'w_title': 'Grammars', 'w_dimensions': '400x300', 'w_resizable': (False, False), 'txt_box_h': 25,\n",
     "                'txt_box_w': 25, 'txt_box_coor': (0, 0), 'b_pda_name': 'Create Automata', 'c_b_name': 'Clear Grammar',\n",
-    "                'b_width': 50, 'c_b_width': 25, 'b_pda_coor': (250, 0), 'c_b_coord': (250, 50),\n",
+    "                'v_b_name': 'Validate String', 'b_width': 25, 'c_b_width': 25, 'e_width': 25, 'v_b_width': 25,\n",
+    "                'b_pda_coor': (225, 50), 'c_b_coor': (225, 100), 'e_coor': (225, 175), 'v_b_coor': (225, 225),\n",
     "                'input_err_m': 'Your input does not follow the convention', 'err_0': 'Your productions are not well written',\n",
-    "                'err_1': 'There is an infinite cycle in your productions'}"
+    "                'err_1': 'There is an infinite cycle in your productions', 'err_2': 'The string must end with !',\n",
+    "                'err_3': 'These characters are reserved: ' + ''.join(pcv_variables['special_characters']),\n",
+    "                'err_4': 'You have not created an automata yet', 'err_5': 'This field cannot be empty',\n",
+    "                'err_6': 'The character !, goes at the end', 'label_1_txt': 'Enter a string to validate',\n",
+    "                'label_1_coor': (225, 150)}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Application"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 252,
+   "execution_count": 502,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,28 +81,40 @@
     "        self.production_set = None\n",
     "        self.pda_creator = None\n",
     "        self.push_down_automata = None\n",
+    "        self.entry = None\n",
+    "        self.validation_button = None\n",
+    "        self.string_to_validate = ''\n",
+    "        self.grammar = ''\n",
+    "        self.label_1 = None\n",
     "        \n",
     "    def start(self):\n",
-    "        self.window = wc.create_main_window(self.ui_variables['w_title'], self.ui_variables['w_dimensions'],\n",
+    "        self.window = wc1.create_main_window(self.ui_variables['w_title'], self.ui_variables['w_dimensions'],\n",
     "                                       self.ui_variables['w_resizable'])\n",
-    "        self.txt_box = wc.create_text_box(self.window, self.ui_variables['txt_box_h'], self.ui_variables['txt_box_w'])\n",
+    "        self.txt_box = wc1.create_text_box(self.window, self.ui_variables['txt_box_h'], self.ui_variables['txt_box_w'])\n",
     "        self.txt_box.place(x=self.ui_variables['txt_box_coor'][0], y=self.ui_variables['txt_box_coor'][1])\n",
-    "        self.b_pda = wc.create_button(self.window, self.ui_variables['b_pda_name'], self.ui_variables['b_width'],\n",
+    "        self.b_pda = wc1.create_button(self.window, self.ui_variables['b_pda_name'], self.ui_variables['b_width'],\n",
     "                                      self.create_push_down_automata)\n",
     "        self.b_pda.place(x=self.ui_variables['b_pda_coor'][0], y=self.ui_variables['b_pda_coor'][1])\n",
-    "        self.clear_button = wc.create_button(self.window, self.ui_variables['c_b_name'], self.ui_variables['c_b_width'],\n",
+    "        self.clear_button = wc1.create_button(self.window, self.ui_variables['c_b_name'], self.ui_variables['c_b_width'],\n",
     "                                      self.clear_grammars)\n",
-    "        self.clear_button.place(x=self.ui_variables['c_b_coord'][0], y=self.ui_variables['c_b_coord'][1])\n",
+    "        self.clear_button.place(x=self.ui_variables['c_b_coor'][0], y=self.ui_variables['c_b_coor'][1])\n",
+    "        self.entry = wc1.create_entry(self.window, self.string_to_validate, self.ui_variables['e_width'])\n",
+    "        self.entry.place(x=self.ui_variables['e_coor'][0], y=self.ui_variables['e_coor'][1])\n",
+    "        self.validation_button = wc1.create_button(self.window, self.ui_variables['v_b_name'], self.ui_variables['v_b_width'],\n",
+    "                                      self.validate_string)\n",
+    "        self.validation_button.place(x=self.ui_variables['v_b_coor'][0], y=self.ui_variables['v_b_coor'][1])\n",
+    "        self.label_1 = wc1.create_label(self.window, self.ui_variables['label_1_txt'])\n",
+    "        self.label_1.place(x=self.ui_variables['label_1_coor'][0], y=self.ui_variables['label_1_coor'][1])\n",
     "        self.window.mainloop()\n",
     "        \n",
     "    def valid_productions(self, productions):\n",
     "        valid = True\n",
     "        if not self.production_validator.productions_are_well_written(productions):\n",
     "            valid = False\n",
-    "            wc.show_error_message(self.ui_variables['err_0'])\n",
+    "            wc1.show_error_message(self.ui_variables['err_0'])\n",
     "        if self.production_validator.production_with_infinite_cycle(productions):\n",
     "            valid = False\n",
-    "            wc.show_error_message(self.ui_variables['err_1'])\n",
+    "            wc1.show_error_message(self.ui_variables['err_1'])\n",
     "        return valid\n",
     "    \n",
     "    def get_selection_set(self):\n",
@@ -153,22 +170,65 @@
     "                    else:\n",
     "                        report += ('production: ' + production.left_side + '->' + ''.join(production.right_side) +\n",
     "                                   ' with selection set: '+ sets + '\\n'+ '\\n')                \n",
-    "        wc.show_info_message(report)\n",
+    "        wc1.show_info_message(report)\n",
     "        if self.push_down_automata:\n",
-    "            wc.show_info_message('Automata Created')\n",
+    "            wc1.show_info_message('Automata Created')\n",
+    "            self.grammar = self.txt_box.get(\"1.0\",\"end-1c\")\n",
     "        else:\n",
-    "            wc.show_info_message('Automata was not Created')\n",
+    "            wc1.show_info_message('Automata was not Created')\n",
     "    \n",
     "    def clear_grammars(self):\n",
     "        self.push_down_automata = None\n",
     "        self.txt_box.delete(\"1.0\",\"end-1c\")\n",
+    "        self.grammar = ''\n",
+    "    \n",
+    "    def string_is_well_written(self, string):\n",
+    "        well_written = True\n",
+    "        try:\n",
+    "            if not string.index(self.pcv_variables['end_of_sequence_symbol']) == len(string)-1:\n",
+    "                wc1.show_error_message(self.ui_variables['err_6'])\n",
+    "                well_written = False\n",
+    "            else:\n",
+    "                for symbol in string:\n",
+    "                    if (symbol in self.pcv_variables['special_characters'] and\n",
+    "                        symbol != self.pcv_variables['end_of_sequence_symbol']):\n",
+    "                        wc1.show_error_message(self.ui_variables['err_3'])\n",
+    "                        well_written = False\n",
+    "                        break\n",
+    "        except:\n",
+    "            well_written = False\n",
+    "            wc1.show_error_message(self.ui_variables['err_2'])\n",
+    "        return  well_written\n",
+    "    \n",
+    "    def convert_string_to_list(self, string):\n",
+    "        _list = []\n",
+    "        for symbol in string:\n",
+    "            _list.append(symbol)\n",
+    "        return _list\n",
+    "    \n",
+    "    def validate_string(self):\n",
+    "        if self.push_down_automata:\n",
+    "            string = self.entry.get()\n",
+    "            if string:\n",
+    "                if self.string_is_well_written(string):\n",
+    "                    string_list = self.convert_string_to_list(string)\n",
+    "                    if self.push_down_automata.belongs_to_language(string_list):\n",
+    "                        wc1.show_info_message('The string belongs to the language generated by the grammar:' +\n",
+    "                                             '\\n' + self.grammar)\n",
+    "                    else:\n",
+    "                        wc1.show_info_message('The string does not belong to the language generated by the grammar:' +\n",
+    "                                             '\\n' + self.grammar)\n",
+    "            else:\n",
+    "                wc1.show_error_message(self.ui_variables['err_5'])\n",
+    "        else:\n",
+    "            wc1.show_error_message(self.ui_variables['err_4'])\n",
     "        \n",
     "    def create_push_down_automata(self):\n",
     "        string = self.txt_box.get(\"1.0\",\"end-1c\")\n",
     "        self.push_down_automata = None\n",
     "        productions = self.production_creator.create_productions(self.production_creator.from_string_to_list(string))\n",
     "        if not productions:\n",
-    "            wc.show_error_message(self.ui_variables['input_err_m'])\n",
+    "            wc1.show_error_message(self.ui_variables['input_err_m'])\n",
     "        else:\n",
     "            non_terminals = self.production_creator.get_non_terminals(productions)\n",
     "            self.production_validator = PCV.ProductionValidator(non_terminals, self.pcv_variables['null_sequence_symbol'],\n",
@@ -180,7 +240,7 @@
     "                                                 self.pcv_variables['end_of_sequence_symbol'], productions, non_terminals)\n",
     "                selection_set = self.get_selection_set()\n",
     "                stack_operations = pda.StackOperation()\n",
-    "                self.pda_creator = PDACR1.PDACreator(self.pcv_variables['end_of_sequence_symbol'], \n",
+    "                self.pda_creator = PDACR9.PDACreator(self.pcv_variables['end_of_sequence_symbol'], \n",
     "                                                   self.pcv_variables['null_sequence_symbol'],\n",
     "                                                   self.pcv_variables['empty_stack_symbol'],\n",
     "                                                   initial_non_terminal, non_terminals, productions, stack_operations,\n",
@@ -190,35 +250,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Start Application"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 253,
+   "execution_count": 503,
    "metadata": {},
    "outputs": [],
    "source": [
     "app = App(pcv_variables, ui_variables)\n",
     "app.start()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
