--- a/App.ipynb
+++ b/App.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,6 +119,7 @@
     "    \n",
     "    def get_selection_set(self):\n",
     "        nullable_non_terminals = self.production_set.get_nullable_non_terminals()\n",
+    "        print(nullable_non_terminals)\n",
     "        nullable_productions = self.production_set.get_nullable_productions(nullable_non_terminals)\n",
     "        set_of_firsts_for_non_terminals = self.production_set.replace_non_terminals(self.production_set.get_firsts_base_cases(\n",
     "            nullable_non_terminals))\n",
@@ -259,9 +260,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Exception in Tkinter callback\n",
+      "Traceback (most recent call last):\n",
+      "  File \"C:\\Users\\Daniel\\anaconda3\\lib\\tkinter\\__init__.py\", line 1705, in __call__\n",
+      "    return self.func(*args)\n",
+      "  File \"<ipython-input-3-b1ecdb946aaf>\", line 176, in create_push_down_automata\n",
+      "    selection_set = self.get_selection_set()\n",
+      "  File \"<ipython-input-3-b1ecdb946aaf>\", line 54, in get_selection_set\n",
+      "    nullable_non_terminals = self.production_set.get_nullable_non_terminals()\n",
+      "  File \"C:\\Users\\Daniel\\Desktop\\grammars\\NecessarySets.py\", line 122, in get_nullable_non_terminals\n",
+      "    suspected_p = self.get_suspected_productions(nullable_non_terminals, no_nullable_non_terminals)\n",
+      "  File \"C:\\Users\\Daniel\\Desktop\\grammars\\NecessarySets.py\", line 83, in get_suspected_productions\n",
+      "    if (self.only_right_side_of_non_terminals(production) and not production.left_side in nullable_non_terminals and\n",
+      "  File \"C:\\Users\\Daniel\\Desktop\\grammars\\NecessarySets.py\", line 42, in only_right_side_of_non_terminals\n",
+      "    if not self.is_non_terminal(symbol):\n",
+      "  File \"C:\\Users\\Daniel\\Desktop\\grammars\\NecessarySets.py\", line 31, in is_non_terminal\n",
+      "    return symbol in self.non_terminal_arr\n",
+      "KeyboardInterrupt\n"
+     ]
+    }
+   ],
    "source": [
     "app = App(pcv_variables, ui_variables)\n",
     "app.start()"
