--- a/App.ipynb
+++ b/App.ipynb
@@ -9,13 +9,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "import PCV\n",
     "import wc1\n",
-    "import NecessarySets as ns\n",
+    "import NecessarySets1 as ns\n",
     "import PDACR9\n",
     "import PDA9 as pda"
    ]
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,10 +119,8 @@
     "    \n",
     "    def get_selection_set(self):\n",
     "        nullable_non_terminals = self.production_set.get_nullable_non_terminals()\n",
-    "        print(nullable_non_terminals)\n",
     "        nullable_productions = self.production_set.get_nullable_productions(nullable_non_terminals)\n",
-    "        set_of_firsts_for_non_terminals = self.production_set.replace_non_terminals(self.production_set.get_firsts_base_cases(\n",
-    "            nullable_non_terminals))\n",
+    "        set_of_firsts_for_non_terminals = self.production_set.get_set_of_firsts(nullable_non_terminals)\n",
     "        set_of_firsts_for_productions = self.production_set.get_set_of_firsts_for_productions(nullable_non_terminals,\n",
     "                                                                                set_of_firsts_for_non_terminals)\n",
     "        set_of_nexts = self.production_set.replace_non_terminals(self.production_set.get_nexts_base_cases(\n",
@@ -260,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
